--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "launch": {
         "configurations": [],
         "compounds": []
-    }
+    },
+    "liveServer.settings.multiRootWorkspaceName": "ecoworking-maquette-php"
 }
