--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "configurations": [],
         "compounds": []
     },
-    "liveServer.settings.multiRootWorkspaceName": "ecoworking-maquette-php"
+    "liveServer.settings.multiRootWorkspaceName": "ecoworking-maquette-php",
+    "liveServer.settings.port": 5501
 }
